# oct_labeler

./: .gitignore  README.md  build_exe.ps1  checkable_list.py  main.py  migrate_labels_3_4.py  migrate_mat_label_to_hdf5.py  oct_labeler.ini  oct_labeler.py  pyproject.toml  requirements.txt  setup.cfg  switch_PySide_version.py
oct_labeler/: __init__.py  __main__.py  checkable_list.py  cli.py  data.py  imgproc.py  labeler_gui.py  main.py  oct_data.py  oct_label_migrate.py  qt_utils.py  single_select_dialog.py  wait_cursor.py
oct_labeler/gui/: __init__.py  checkable_list.py  display_settings_widget.py  fix_offcenter.py  qt_utils.py  single_select_dialog.py  v3d.py  wait_cursor.py
typings/cv2/: __init__.pyi
