[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oct_labeler"
version = "0.9.0"
dependencies = [
  "PySide6",
  "pyqtgraph",
  "numpy",
  "numba",
  "scipy",
  "h5py",
  "click",
  "PyInstaller; platform_system=='Windows'",
]

[project.scripts]
oct_labeler = "oct_labeler.cli:cli"

[[tool.mypy.overrides]]
module = ["cv2.*", "scipy.*", "pyqtgraph.*", "h5py.*", "numba.*"]
ignore_missing_imports = true

