[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oct_labeler"
version = "0.10.1"
dependencies = [
  "PySide6",
  "click",
  "h5py",
  "numba",
  "numpy",
  "opencv-python",
  "pyqtgraph",
  "scipy",
  "tqdm",
  "vispy",
  "PyInstaller; platform_system=='Windows'",
]

[project.scripts]
oct_labeler = "oct_labeler.cli:cli"

[tool.setuptools]
packages = ["oct_labeler", "oct_labeler.gui"]

[tool.mypy.overrides]
module = ["cv2.*", "scipy.*", "pyqtgraph.*", "h5py.*", "numba.*"]
ignore_missing_imports = true

