[metadata]
name = oct_labeler
version = attr: oct_labeler.__version__

[options]
zip_safe = False
packages = oct_labeler
install_requires = 
  PySide6
  pyqtgraph
  numpy
  scipy
  python_version>"3.10"

[options.entry_points]
console_scripts =
  oct_labeler = oct_labeler.main:main
  oct_label_migration = oct_labeler.oct_label_migrate:main
